--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,24 @@ ul {
 
 .teg-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
+.current {
+    color: #404bbf;
+    position: relative;
+}
+
+.current::after {
+    
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .header-logo {
     font-family: "Raleway", sans-serif;
@@ -129,6 +145,12 @@ ul {
     background-color: #2e2f42;
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)), url(../images/images/7e83b6c8ee4603ea892aa8aaebb3c5fe.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .section-one-title {
@@ -141,6 +163,21 @@ ul {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 48px;
+}
+
+.div-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
+.svg-teg {
+    width: 64;
+    height: 64;
 }
 
 .section-one-button {
@@ -159,6 +196,7 @@ ul {
     border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .section-one-button:hover {
