--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,54 @@ ul {
     border-radius: 0px 0px 4px 4px;
 }
 
+.section-five {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.title-five {
+    font-size: 36px;
+    line-height: 1.11;
+    color: #2e2f42;
+    margin-bottom: 72px;
+}
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+}
+
+.li-customers {
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+}
+
+.a-customers {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #8e8f99;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.a-customers:hover {
+    border-color: #404bbf;
+}
+
+.a-customers:focus {
+    border-color: #404bbf;
+    color: #404bbf;
+}
+
+.svg-five {
+    fill: currentColor;
+}
+
 .members-container {
     padding: 32px 16px;
     text-align: center;
@@ -451,4 +499,9 @@ ul {
 
 .main-title {
     margin-bottom: 8px;
+}
+
+.div-footer {
+    display: flex;
+    align-items: baseline;
 }
