--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ ul {
     padding-top: 24px;
     padding-bottom: 24px;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list {
@@ -131,6 +132,7 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-tel-list:hover {
@@ -378,9 +380,11 @@ ul {
 
 .insta-a {
     width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -411,6 +415,9 @@ ul {
 .ul-three-content {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .section-five {
@@ -464,8 +471,7 @@ ul {
 .members-container {
     padding: 32px 16px;
     text-align: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 0;
 }
 
 .section-portfolio {
