--- a/css/styles.css
+++ b/css/styles.css
@@ -62,21 +62,6 @@ ul {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.current {
-    color: #404bbf;
-    position: relative;
-}
-
-.current::after {
-    
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .header-logo {
     font-family: "Raleway", sans-serif;
@@ -132,7 +117,7 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-tel-list:hover {
@@ -432,6 +417,22 @@ ul {
     margin-bottom: 72px;
 }
 
+.current {
+    color: #404bbf;
+    position: relative;
+}
+
+.current::after {
+
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .customers-list {
     display: flex;
     gap: 24px;
@@ -457,6 +458,7 @@ ul {
 
 .a-customers:hover {
     border-color: #404bbf;
+    color: #404bbf;
 }
 
 .a-customers:focus {
@@ -511,3 +513,56 @@ ul {
     display: flex;
     align-items: baseline;
 }
+
+.div-footer-two {
+    margin-right: 120px;
+}
+
+.footer-p-two {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-ul {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-li {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-a {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-a:hover {
+    background-color: #31d0aa;
+}
+
+.footer-a:focus {
+    background-color: #31d0aa;
+}
+
+.svg-footer {
+    fill: #f4f4fd;
+}
+
+
+
+
+
+
+
+
