--- a/css/styles.css
+++ b/css/styles.css
@@ -394,6 +394,7 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4,0,0.2,1);
 }
 
 .svg-teg-two {
@@ -568,7 +569,7 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-a:hover {
@@ -650,6 +651,7 @@ ul {
 
 .is-hidden {
     opacity: 0;
+    visibility: hidden;
     pointer-events: none;
 }
 
