--- a/css/styles.css
+++ b/css/styles.css
@@ -88,14 +88,14 @@ ul {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
+   
 }
 
 .app-class:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
+ 
 }
 
 .header-studio {
@@ -676,6 +676,10 @@ ul {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.images-p:hover {
+    transform: translateY(0%);
+}
 
-
-
+.images-p:focus {
+    transform: translateY(0%);
+}
