--- a/css/styles.css
+++ b/css/styles.css
@@ -91,10 +91,18 @@ ul {
     transform: translateY(0%);
 }
 
+.app-class:hover.text {
+    transform: translateY(0%);
+}
+
 .app-class:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
+}
+
+.app-class:focus.text {
     transform: translateY(0%);
 }
 
