--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,7 @@ ul {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover.text,
-.link:focus.text {
+.images-p:hover .text,
+.images-p:focus .text {
     transform: translateY(0%);
 }
