--- a/css/styles.css
+++ b/css/styles.css
@@ -444,6 +444,7 @@ ul {
     line-height: 1.11;
     color: #2e2f42;
     margin-bottom: 72px;
+    text-align: center;
 }
 
 .current {
@@ -460,6 +461,7 @@ ul {
     background-color: #404bbf;
     border-radius: 2px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 100%;
 }
 
 .customers-list {
